Fix contrast issues

--- a/src/assets/sass/_typography.scss
+++ b/src/assets/sass/_typography.scss
@@ -16,14 +16,15 @@ h2 {
 
 a {
   color: var(--primary);
-  text-decoration-thickness: 0.2em;
+  text-decoration-thickness: 0.12em;
   text-underline-offset: 0.3em;
   transition: color 300ms, text-underline-offset 300ms;
 
   &:hover,
   &:focus {
+    font-weight: 600;
     color: var(--text);
-    text-underline-offset: 0.4em;
+    text-decoration-thickness: 0.2em;
   }
 }
 
@@ -32,16 +33,28 @@ p {
 }
 
 code {
-  background-color: #435368;
+  background-color: rgb(230, 227, 213);
   border-radius: 0.25em;
   padding: 0 0.4em;
   font-size: 90%;
 }
 
+@media (prefers-color-scheme: dark) {
+  code {
+    background-color: #435368;
+  }
+
+  .footer a {
+    color: #ea0000;
+  }
+}
+
 .footer a {
+  font-weight: 600;
+
   &:hover,
   &:focus {
-    color: var(--primary);
+    color: var(--background);
     font-weight: 600;
   }
 }
