--- a/src/assets/sass/components/_alert.scss
+++ b/src/assets/sass/components/_alert.scss
@@ -1,5 +1,13 @@
 .alert {
-  background-color: #2d4360;
   padding: 1rem;
-  border: 1px solid currentColor;
+  border-inline-start: 0.3rem solid currentColor;
+  background-color: #dddbcc;
+  color: var(--text);
+}
+
+@media (prefers-color-scheme: dark) {
+  .alert {
+    color: var(--text);
+    background-color: #2d4360;
+  }
 }
