--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -16,10 +16,10 @@
 
 :root {
   --background: #fffce9;
-  --primary: #db0009;
-  --primary-light: #ff5e64;
+  --primary: #b20000;
+  --primary-light: #ff9fa1;
   --text: #1f2e42;
-  --text-light: #6f7475;
+  --text-light: #51585a;
   --font-serif: "Libre Baskerville", Georgia, "Times New Roman", Times, serif;
 
   --s--2: clamp(0.78rem, calc(0.76rem + 0.11vw), 0.84rem);
